# AI-Product-Recommender

./: .gitignore  PROJECT_CONTEXT.md  README.md  TODO.txt  VISUAL_OVERVIEW_EVALS.md  project_structure.txt  pyproject.toml  requirements.txt
backend/: TODO.txt
backend/app/: main.py  test_llm.py  user_prompt.py
backend/app/prompts/: LLM_SQL.txt  (+1 more)
backend/scraping/: STRUCTURE.txt  TODO.txt  clear_vector_db.py  nutritional_info_ocr.py  nutritional_info_vlm.py  product_info_llm.py  scraper.py  scraper_fast.py  test_db_conn.py  test_rate_limiter.py  test_semaphore.py
data/: df_products.csv
data/chroma_db/: chroma.sqlite3
data/ground_truth_evals/: product_info.csv  product_info.xlsx
databases/: clear_relational.py  clear_vector.py  db_operations.py  db_utils.py  df_products.csv
databases/chroma_db/: chroma.sqlite3
evals/: evaluators.py  metrics.py  run_eval.py  try.ipynb
scraping/: STRUCTURE.txt  TODO.txt  llm_tasks_gemini.py  llm_tasks_groq.py  measurement.txt  nutritional_info_ocr.py  nutritional_info_vlm.py  product_info_llm.py  scraper.py  scraper_fast.py  scraper_fast_cloud.py
scraping/prompts/: BRAND_ALLERGENS.txt  BRAND_ALLERGIES_prod.txt  OCR_LLM.txt  VLM.txt
scripts/: clear_relational.py  clear_single_table.py  clear_vector.py
src/ai/: config.py  groq_client.py  orchestrator.py  prompt.py  prompts.py  schemas.py
src/database/: db_operations.py  db_utils.py  models.py
src/scraper/: playwright_scraper.py  utils.py
tests/: test_ai.py  test_db_conn.py  test_download_img.py  test_rate_limiter.py  test_scraper.py  test_semaphore.py
(+41 files in other folders)
