[project]
name = "mercadona-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
]
